Solved problems with inputs on ios devices

--- a/app/assets/stylesheets/psique/structures/_menu.scss
+++ b/app/assets/stylesheets/psique/structures/_menu.scss
@@ -55,7 +55,7 @@
     display: inline-block;
     width: 100%;
     i {
-      border-left: solid 1px white;
+      border-left: solid 1px $navy-blue;
       margin-right: -17px;
       margin-top: -17px;
       padding: 18.5px 25px;
